--- a/pom.xml
+++ b/pom.xml
@@ -15,23 +15,39 @@
     <maven.compiler.target>17</maven.compiler.target>
   </properties>
   <repositories>
-      <repository>
-          <id>spigot-repo</id>
-          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-      </repository>
+    <repository>
+        <id>spigot-repo</id>
+        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+        <id>sk89q-repo</id>
+        <url>https://maven.enginehub.org/repo/</url>
+    </repository>
   </repositories>
   <dependencies>
-      <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.20.1-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-      </dependency>
-      <dependency>     
-        <groupId>com.google.code.gson</groupId>     
-        <artifactId>gson</artifactId>     
-        <version>2.8.6</version>     
-      </dependency>    
+    <dependency>
+          <groupId>org.spigotmc</groupId>
+          <artifactId>spigot-api</artifactId>
+          <version>1.20.1-R0.1-SNAPSHOT</version>
+          <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.sk89q.worldguard</groupId>
+        <artifactId>worldguard-bukkit</artifactId>
+        <version>7.0.0</version>
+        <scope>provided</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+          </exclusion>
+        </exclusions>
+    </dependency>
+    <!-- <dependency>     
+      <groupId>com.google.code.gson</groupId>     
+      <artifactId>gson</artifactId>     
+      <version>2.8.6</version>     
+    </dependency>     -->
   </dependencies>
   <build>
     <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
