--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,25 @@
 # yaml-language-server: $schema=https://json.schemastore.org/bukkit-plugin
-main: com.danidipp.lom.Plugin
 name: dipp-generate
+main: com.danidipp.lom.Plugin
 version: 1.0
+api-version: 1.20
+depend:
+    - WorldGuard
 
 commands:
-    helloWorld:
-        description: Hello, World!
+    register:
+        description: Registers new location
+        # permission: dipp.commands.register
+        usage: /<command> <list>
+    reload:
+        description: Reloads config
+        # permission: dipp.commands.reload
         usage: /<command>
+    plotbuy:
+        description: Make player buy plot
+        permission: dipp.commands.plotbuy
+        usage: /<command> <player>
+    plotsell:
+        description: Make player sell plot
+        permission: dipp.commands.plotsell
+        usage: /<command> <player>
