--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,17 @@
   </repositories>
   <dependencies>
     <dependency>
-          <groupId>org.spigotmc</groupId>
-          <artifactId>spigot-api</artifactId>
-          <version>1.20.1-R0.1-SNAPSHOT</version>
-          <scope>provided</scope>
+        <groupId>org.spigotmc</groupId>
+        <artifactId>spigot-api</artifactId>
+        <version>1.20.2-R0.1-SNAPSHOT</version>
+        <scope>provided</scope>
     </dependency>
+    <!-- <dependency>
+        <groupId>org.spigotmc</groupId>
+        <artifactId>spigot</artifactId>
+        <version>1.20.2-R0.1-SNAPSHOT</version>
+        <scope>provided</scope>
+    </dependency> -->
     <dependency>
         <groupId>com.sk89q.worldguard</groupId>
         <artifactId>worldguard-bukkit</artifactId>
