--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
         <id>sk89q-repo</id>
         <url>https://maven.enginehub.org/repo/</url>
     </repository>
+    <repository>
+        <id>placeholderapi</id>
+        <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
@@ -48,6 +52,12 @@
             <artifactId>bstats-bukkit</artifactId>
           </exclusion>
         </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>me.clip</groupId>
+      <artifactId>placeholderapi</artifactId>
+      <version>2.10.0</version>
+      <scope>provided</scope>
     </dependency>
     <!-- <dependency>     
       <groupId>com.google.code.gson</groupId>     
