--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <maven.exec.skip>true</maven.exec.skip> <!-- skip the server restart command unless "-Dmaven.exec.skip=false" is provided -->
   </properties>
   <repositories>
     <repository>
-        <id>spigot-repo</id>
-        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        <id>papermc</id>
+        <url>https://repo.papermc.io/repository/maven-public/</url>
     </repository>
     <repository>
         <id>sk89q-repo</id>
@@ -30,8 +31,8 @@
   </repositories>
   <dependencies>
     <dependency>
-        <groupId>org.spigotmc</groupId>
-        <artifactId>spigot-api</artifactId>
+        <groupId>io.papermc.paper</groupId>
+        <artifactId>paper-api</artifactId>
         <version>1.20.2-R0.1-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
@@ -76,24 +77,39 @@
         </includes>
       </resource>
     </resources>
-    <plugins>
+    <plugins> 
       <plugin>
-          <artifactId>maven-antrun-plugin</artifactId>
-          <configuration>
-              <tasks>
-                  <copy file="target/dippgen-1.0.jar" todir="target/plugins"/>
-              </tasks>
-          </configuration>
-          <executions>
-              <execution>
-                  <phase>install</phase>
-                  <goals>
-                      <goal>run</goal>
-                  </goals>
-              </execution>
-          </executions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.5.2</version>
       </plugin>
-  </plugins>
+      <plugin>
+        <!-- Restart dev server via rcon -->
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.5.0</version>
+        <executions>
+            <execution>
+                <phase>install</phase>
+                <goals>
+                    <goal>exec</goal>
+                </goals>
+                <configuration>
+                    <skip>${maven.exec.skip}</skip>
+                    <executable>./rcon</executable>
+                    <workingDirectory>/workspaces/java-minecraft/server</workingDirectory>
+                    <arguments>
+                        <argument>stop</argument>
+                    </arguments>
+                    <successCodes>
+                      <successCode>0</successCode>
+                      <successCode>1</successCode>
+                    </successCodes>
+                </configuration>
+            </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
   
 </project>
